<resources>
    <string name="app_name">Arnaud Soundboard</string>

    <!-- Menu options -->
    <string name="action_arnaud">Contacto</string>
    <string name="action_about">Versión</string>

    <string name="action_koi">Página oficial</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_linkedin">LinkedIn</string>
    <string name="action_wordpress">Wordpress</string>

    <!-- Urls -->
    <string name="url_koi">http://www.koimartialart.com/</string>
    <string name="url_wordpress">https://kumafr.wordpress.com/</string>
    <string name="url_linkedin">https://www.linkedin.com/in/arnaudcousergue/</string>
    <string name="url_facebook">https://www.facebook.com/arnaud.cousergue</string>
    <string name="url_share_app">https://play.google.com/store/apps/details?id=com.jihiryu.albertoi.arnaudsounds</string>

    <!-- Share text -->
    <string name="share_title">Compartir la aplicación a través de:</string>

    <!-- Snackbar text -->
    <string name="sb_entre_lineas">Ninjutsu te enseña a leer entre líneas</string>
    <string name="sb_vol_mono">Tienes que aumentar el volumen, mono</string>

    <!-- Versión -->
    <string name="version">1.2.0 by Jihiryu Dojo Mobile</string>

</resources>