<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jihiryu.albertoi.arnaudsounds.MainActivity">

    <item
        android:id="@+id/action_koi"
        android:orderInCategory="100"
        android:title="@string/action_koi"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_linkedin"
        android:orderInCategory="100"
        android:title="@string/action_linkedin"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_facebook"
        android:orderInCategory="100"
        android:title="@string/action_facebook"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_arnaud"
        android:orderInCategory="100"
        android:title="@string/action_arnaud"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>